resizable font wrapping fix (but only works in firefox & opera) + link and css fixes

--- a/d3/style.css
+++ b/d3/style.css
@@ -14,7 +14,7 @@ body {
 #header, #footer {
   z-index: 1;
   display: block;
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 300;
   text-shadow: 0 1px 0 #fff;
 }
@@ -25,13 +25,14 @@ body {
 }
 
 #header {
-  top: 80px;
+  top:10px;
+  text-align:center;
   left: 140px;
   width: 1000px;
 }
 
 #footer {
-  top: 680px;
+  top: 700px;
   right: 140px;
   text-align: right;
 }
@@ -86,4 +87,50 @@ a:hover {
   width: 1280px;
   font-size: 12px;
   color: #999;
+}
+
+/* button 
+---------------------------------------------- */
+.button {
+	display: inline-block;
+	zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
+	*display: inline;
+	vertical-align: baseline;
+	margin: 0 2px;
+	outline: none;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	font: 12px/100% Arial, Helvetica, sans-serif;
+	padding: .3em .5em;
+
+}
+.button:hover {
+	text-decoration: none;
+}
+.button:active {
+	position: relative;
+	top: 1px;
+}
+
+/* blue */
+.blue {
+	color: #d9eef7;
+	border: solid 1px #0076a3;
+	background: #0095cd;
+	background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
+	background: -moz-linear-gradient(top,  #00adee,  #0078a5);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#00adee', endColorstr='#0078a5');
+}
+.blue:hover {
+	background: #007ead;
+	background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+	background: -moz-linear-gradient(top,  #0095cc,  #00678e);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#0095cc', endColorstr='#00678e');
+}
+.blue:active {
+	color: #80bed6;
+	background: -webkit-gradient(linear, left top, left bottom, from(#0078a5), to(#00adee));
+	background: -moz-linear-gradient(top,  #0078a5,  #00adee);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#0078a5', endColorstr='#00adee');
 }
